resolved alignment issues

--- a/src/components/Staff/Staffdashboard.css
+++ b/src/components/Staff/Staffdashboard.css
@@ -14,8 +14,8 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 .staff-dashboard-button{
-    width: 400px;
-    height: 300px;
+    width: 350px;
+    height: 250px;
     border-radius: 40px;
     background: rgba(254, 254, 254, 0.10);
     box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
